<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cringe_studios.cringe_authenticator.MainActivity">
    <item
        android:id="@+id/action_new_group"
        android:orderInCategory="100"
        android:title="@string/action_new_group"
        app:showAsAction="never"
        android:onClick="addGroup" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:onClick="openSettings" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"
        android:onClick="openAbout" />
</menu>