<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_otp"
        android:orderInCategory="100"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/action_new_group"
        android:onClick="addOTP"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:onClick="openSettings" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"
        android:onClick="openAbout" />
    <item
        android:id="@+id/action_lock"
        android:orderInCategory="100"
        android:title="Lock"
        app:showAsAction="never"
        android:onClick="lockApp" />
</menu>