<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/otp_add_name"
        android:autofillHints="" />

    <EditText
        android:id="@+id/input_secret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/otp_add_secret"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/input_algorithm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <Spinner
        android:id="@+id/input_digits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <EditText
        android:id="@+id/input_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/otp_add_counter"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/input_checksum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_add_checksum" />

</LinearLayout>