<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new_group"
        android:orderInCategory="100"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/action_new_group"
        android:onClick="addGroup"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_group"
        android:orderInCategory="100"
        android:icon="@drawable/baseline_edit_24"
        android:title="Edit Group"
        android:onClick="editGroup"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete_group"
        android:orderInCategory="100"
        android:icon="@drawable/baseline_delete_24"
        android:title="Delete Group"
        android:onClick="deleteGroup"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:onClick="openSettings" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"
        android:onClick="openAbout" />
</menu>