<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_launcher_background">

    <EditText
        android:id="@+id/input_password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/confirm_password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/confirm_password_textview"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_textview" />

    <TextView
        android:id="@+id/confirm_password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        app:layout_constraintStart_toStartOf="@+id/input_password_edittext"
        app:layout_constraintTop_toBottomOf="@+id/input_password_edittext" />

    <TextView
        android:id="@+id/set_password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password"
        app:layout_constraintBottom_toTopOf="@+id/input_password_edittext"
        app:layout_constraintStart_toStartOf="@+id/input_password_edittext" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="208dp"
        app:layout_constraintBottom_toTopOf="@+id/input_password_edittext"
        app:layout_constraintEnd_toEndOf="@+id/input_password_edittext"
        app:layout_constraintStart_toStartOf="@+id/input_password_edittext"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cringeauth_white" />

</androidx.constraintlayout.widget.ConstraintLayout>